--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "px-rem",
-    "version": "1.0.1",
+    "version": "1.0.4",
     "description": "a tool to convert px to rem",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "node ./index.js"
     },
     "repository": {
         "type": "git",
@@ -20,11 +20,12 @@
     "bugs": {
         "url": "https://github.com/finance-sh/px-rem/issues"
     },
-    "homepage": "https://github.com/finance-sh/px-rem#readme",
     "bin": {
-        "px2rem": "./index.js"
+        "px2rem" : "./index.js"
     },
+    "homepage": "https://github.com/finance-sh/px-rem#readme",
     "dependencies": {
-        "glob": "7.1.1"
+        "glob": "~7.1.1",
+        "commander": "~2.9.0"
     }
 }
